@@ -1,18 +1,16 @@
-import argparse, shutil, os, time, subprocess, urllib.request, sys
+import argparse, shutil, os, time, subprocess, sys
 
 # given server folder and path to new server.jar
 def getArgs():
     parser = argparse.ArgumentParser()
     parser.add_argument('server', help="Path to the current server folder.")
     parser.add_argument('newJar', help="Path to the updated server.jar.")
+    parser.add_argument('-i', '--show-public-ip', action='store_true', help="Fetch and print public IP address after migrating.")
+    parser.add_argument('-k', '--keep-temp-files', action='store_true', help="Keep folder of items that are no longer necessary after upgrade. (Default behavior is to delete them.)")
 
-    contents = parser.parse_args()
-    output = {
-        "server": os.path.realpath(contents.server),
-        "newJar": os.path.realpath(contents.newJar)
-    }
+    output = parser.parse_args()
 
-    if not output["newJar"].endswith(".jar"): # error condition: provided server file is not .jar
+    if not (str(output.newJar).endswith(".jar")): # error condition: provided server file is not .jar
         raise Exception("Server file must be a .jar file.")
     else: return output
 
@@ -42,7 +40,7 @@ def initServer(jar: str, root: str):
         print("initializing server.jar...")
         subprocess.run(
             ["java", "-jar", activeJar],    # run server jar using "java" command. 
-            cwd=args["server"],             # changes working directory during execution so files are placed in the server folder.
+            cwd=ARGS["server"],             # changes working directory during execution so files are placed in the server folder.
             stdout=subprocess.DEVNULL,      # supress regular terminal output...
             stderr=subprocess.STDOUT)       # ...but not errors
         
@@ -64,9 +62,9 @@ def acceptEULA(root: str):
 
 # copy the files out of tmp folder and attempt to delete it.
 def restoreTmp(root: str):
-    folder = os.path.join(args["server"], "tmp")
+    folder = os.path.join(ARGS["server"], "tmp")
     try:
-        print("Restoring existing server data...")
+        print("Restoring existing serverreturn  data...")
         for i in os.listdir(folder):
             shutil.move(
                 os.path.join(folder, i),
@@ -75,15 +73,17 @@ def restoreTmp(root: str):
     except Exception as e: raise(e)
 
     # delete tmp folder if it is empty
-    if not os.listdir(folder): os.rmdir(os.path.join(args["server"], "tmp"))
+    if not os.listdir(folder): os.rmdir(os.path.join(ARGS["server"], "tmp"))
     else: print("tmp folder could not be deleted because it still contains files.")
 
     return
 
 ### main execution starts here ###
 try:
-    args = getArgs()
-    serverRoot = args["server"]
+    ARGS = getArgs()
+    # serverRoot = ARGS.server
+    print(ARGS.server)
+    quit()
 
     # tmp folder: files to transfer after upgrade
     tmpFolder = os.path.join(serverRoot, "tmp")
@@ -91,28 +91,34 @@ try:
     stashFiles(serverRoot, tmpItems, tmpFolder)
 
     # dump folder: files which can be discarded after upgrade. For safety reasons, the script doesn't delete them itself.
-    dumpFolder = os.path.join(serverRoot, ("dump_" + time.strftime("%Y%m%d-%H%M%S")))
+    dumpName = "dump_" + time.strftime("%Y%m%d-%H%M%S")
+    dumpFolder = os.path.join(serverRoot, dumpName)
     dumpItems = ["logs", "eula.txt", "server.jar", "libraries", "versions"]
     stashFiles(serverRoot, dumpItems, dumpFolder)
 
-    initServer(args["newJar"], serverRoot)
+    initServer(ARGS["newJar"], serverRoot)
     acceptEULA(serverRoot)
     restoreTmp(serverRoot)
 
-    print(f"\nServer upgrade complete. Files in 'dump_' folder can be deleted.")
+    # delete dump folder
+    print("Server upgrade complete.")
     print(f"To launch, run: \ncd {serverRoot}; java -jar ./server.jar --nogui\n")
+    if ARGS.keep_temp_files:
+        print(f"Files in {dumpName} can be safely deleted.")
+    else:
+        try: os.rmdir(dumpFolder)
+        except Exception as e: print(f"dump folder could not be deleted: {e}")
 
     # print IP address to give to friends
-    ipSite = "https://checkip.amazonaws.com"
-    try:
-        myIP = urllib.request.urlopen(ipSite).read().decode('utf8').strip() + ":25565"
-        input("To reveal public IP address, press enter. Otherwise EXIT the program with Ctrl+C or close terminal window.")
-        print("Public server address is:", myIP)
-    except:
-        print(f"Visit {ipSite} to get you public IP. Give this to friends, including :25565 after it.")
-
+    if ARGS.show_public_ip:
+        try:
+            import urllib.request
+            myIP = urllib.request.urlopen("https://checkip.amazonaws.com").read().decode('utf8').strip() + ":25565"
+            print(f"Server address: {myIP}")
+        except Exception as e:
+            print(f"Public IP could not be obtained: {e}")
 except Exception as e: 
     print(e)
-    sys.exit(-1)
+    sys.exit(1)
 
 sys.exit(0)
